--- a/proyecto-estructurador/src/app/app.component.css
+++ b/proyecto-estructurador/src/app/app.component.css
@@ -1,7 +1,9 @@
+	
 .banner {
 	width: 1200px;
 	margin: auto;
 	border-spacing: 60px;
+	display: flex;
 }
 
 .imgb {
@@ -15,15 +17,106 @@
 
 .menu{
 	width: 100%;
-	height: 50px;
 	background-color: #172646;
+	box-sizing: border-box;
+    box-sizing: inherit;
 }
 
 .limite{
 	width: 1200px;
-	height: 60px;
 	margin: 0 auto;
-	
+
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+}
+
+.limite nav{
+	width: 800px;
+	height: 50px;
+
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: flex-start;
+}
+
+.limite nav a{
+	width: 12%;
+	height: 40px;
+	color: #fff;
+	font-family: Gadugi;
+	font-size:14px;
+	text-decoration: none;
+	cursor: pointer;
+
+	padding: 10px;
+	margin-right: 10px;	
+	text-align: center;
+	justify-content: center;
+}
+
+.limite nav a:hover {
+   border-bottom: 4px solid #fff;
+
+}
+
+.limite nav a.active {
+   border-bottom: 4px solid #fff;
+}
+
+
+.limite .usuario{
+	width: 397px;
+	height: 50px;
+
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: flex-end;
+
+}
+
+.limite .usuario a{
+	width: 27%;
+	height: 40px;
+	font-family: Gadugi;
+	font-size:14px;
+	text-decoration: none;
+	cursor: pointer;
+	color: #fff;
+	padding: 10px;
+	margin-left: 10px;	
+	text-align: center;
+	justify-content: center;
+}
+
+.limite .usuario a:hover {
+   border-bottom: 4px solid #fff;
+
+}
+
+.limite .usuario a.active {
+   border-bottom: 4px solid #fff;
+}
+
+
+.limite .usuario .avatar{
+	width: 20%;
+	height: 44px;
+	margin-left: 10px;
+
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: flex-end;
+}
+
+.limite .usuario .avatar img{
+	width: 40px;
+	height: 40px;
+	padding-top: 5px;
+	margin-left: 10px;	
 }
 
 .linea{
@@ -45,30 +138,80 @@
 }
 
 .tabla{	
-	width: 800px;
+	width: 1100px;
 	height: 40px;
 	margin: 0 auto;
+	background: #CECECE;
 }
 
 
 .cbot{
-	width: 210px;
+	width: 310px;
 	height: 50px;
-	margin-left: 990px;
+	margin-left: 890px;
 	margin-top: -40px;
+	background: #cecece;
+	border: 1px solid #000;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+
+
+}
+
+.login{
+	width: 100%;
+	height: 40px;
+	margin: 0 auto;
 
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
+	
+	align-items: center;
+	align-content: center;
+	justify-content: center;
+}
+.login li{
+	width: 20%;
+	height: 40px;
+
 }
 
+.login li img{
+	width: 35px;
+	height: 35px;
+	border-radius: 500px;
+}
+.login a{
+	width: 30%;
+	height: 40px;
+	border:1px solid yellow;
+	color: #fff;
+	font-family: Gadugi;
+	font-size:14px;
+	text-decoration: none;
+	padding: 10px;
+	cursor: pointer;
+}
+
+.login a:hover {
+   border-bottom: 4px solid #fff;
+
+}
+
+.login a.active {
+   border-bottom: 4px solid #fff;
+}
+
+.avatar{
+
+}
 .logout{
 	width: 210%;
 	height: 40px;
 	margin: 0 auto;
-	padding-top: 13px;
-
-	
+	padding-top: 13px;	
 
 }
 .logout a{
@@ -81,14 +224,17 @@
 }
 
 .logout a:hover {
-   color: #000;
-   background-color: #fff;
+   border-bottom: 4px solid #fff;
 
+}
+
+.logout a.active {
+   border-bottom: 4px solid #fff;
 }
 
 #secciones{
 
-  width: 800px;
+  width: 00px;
   padding-top: 13px;
   display: flex;
   justify-content: center;
@@ -101,6 +247,7 @@
 }
 
 #secciones td a {
+  border:1px solid yellow;
   font-family: Gadugi;
   font-size:14px;
   text-decoration: none;
@@ -109,11 +256,14 @@
   cursor: pointer;
 }
 
+
+
 #secciones td a:hover {
-   color: #000;
-   background-color: #fff;
-  /*margin-top:-2px;
-  padding-bottom:12px;*/
+   border-bottom:4px solid #fff;
+}
+
+#secciones td a.active {
+   border-bottom:4px solid #fff;
 }
 
 
@@ -193,49 +343,6 @@ p#titulo{
 	color: white;
 
 }
-
-/*   
-input[type="text"], input[type="password"], input[type="mail"]{
-	width: 350px;
-	height: 40px;
-	margin-left: 18px;
-	margin-top:20px;
-	padding-left: 10px;
-	font-size: 1.1em;
-	outline: none;
-	border:0px;
-	background-color: #fff;
-
-}
-
-input[type="submit"]{
-	margin:20px;
-	margin-bottom: 20px;
-	width:360px;
-	height: 50px;
-	border:0px;
-	background-color: #3db7ef;
-	color: white;
-	font-size: 1.2em;
-	cursor: pointer;
-
-}
-
-input:focus, textarea:focus {
-  outline: 0;
-  border-color: #2d3e50;
-}
-
-
-a.indown{
-  font-family: calibri;
-  font-size:18px;
-  text-decoration: none;
-  float:left;
-  padding-left: 120px;
-  color: #ffffff;
-
-}*/
 
 
 
