--- a/proyecto-estructurador/src/app/components/login/login.component.html
+++ b/proyecto-estructurador/src/app/components/login/login.component.html
@@ -1,42 +1,7 @@
-<!--<div class="cuerpo">
-	<div class="col-lg-6">
-		<h1>{{title}}</h1>
-
-		<div class="alert alert-success" *ngIf="status == 'success'">
-			Login Correcto!!
-		</div>
-
-		<div class="alert alert-danger" *ngIf="status == 'error'">
-			No te has identificado correctamente
-		</div>
-
-		<form class="col-lg-7" #loginForm="ngForm" (ngSubmit)="onSubmit()">
-			<p>
-				<label for="email"> Correo elettronico</label>
-				<input type="email" name="email" #email="ngModel" [(ngModel)]="user.email" class="form-control" required />
-				<span *ngIf="!email.valid && email.touched">
-					El email es obligatorio
-				</span>
-			</p>
-
-			<p>
-				<label for="password">contraseña</label>
-				<input type="password" name="password" #password="ngModel" [(ngModel)]="user.password" class="form-control" required>
-				<span *ngIf="!password.valid && password.touched">
-					La contraseña es obligatoria
-				</span>
-			</p>
-			<input type="submit" value="Entrar" class="btn btn-success">
-		</form>	
-	</div>
-</div>
--->
 
 <div class="cuerpo">
+
 	<div class="anuncio">
-		<div class="alert alert-success" *ngIf="status == 'success'">
-			Login Correcto!!
-		</div>
 
 		<div class="alert alert-danger" *ngIf="status == 'error'">
 			No te has identificado correctamente
@@ -58,8 +23,10 @@
 
 			<input type="submit" value="iniciar sesion">
 			<td class="ini"></td>
-			<p class="tx" align="center"><a class="indown" href="index.html">recuperar contraseña</a> </p>
+			<p class="tx" align="center"><a class="indown" href="index.html">Recuperar contraseña</a></p>
 		</form>
 	</section>
 </div>
+
+
  <!--fin del cuerpo-->
