--- a/proyecto-estructurador/src/app/components/buscar-alberca/buscar-alberca.component.html
+++ b/proyecto-estructurador/src/app/components/buscar-alberca/buscar-alberca.component.html
@@ -4,8 +4,8 @@
 
   <div class="botones">
       <form >
-          <input type="text" [(ngModel)]="busqueda" placeholder="ID de Alberca">
-          <input type="submit" href="inicio.html" value="Buscar Alberca"  >
+          <input type="text" placeholder="ID de Alberca">
+          <input type="submit"  value="Buscar Alberca"  >
       </form>
     
   </div>
@@ -23,30 +23,10 @@
           <td>{{alberca.Alb_Nombre}}</td>
           <td>{{alberca.Alb_Ubicacion}}</td>
           <td class="acciones">
-            <button class="btn btn-lg btn-success" (click)="openModal(ver)" style="margin-right:10px;">
+            <a [routerLink]="['/buscar_sensor',alberca._id]" class="btn btn-lg btn-success" style="margin-right:10px;">
 
               <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> Ver
-            </button>
-
-            <ng-template #ver>
-              <div class="modal-header">
-                <h1 class="modal-title pull-left">{{alberca.Alb_Nombre}}</h1>
-                <button type="button"  class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-            <div class="modal-body">
-                <div class="alberca-box" *ngIf="alberca">
-                  <div class="alberca-head-card">
-                    <img src="{{url+'get-image-alberca/' +alberca.Alb_Image}}" alt="">
-                  </div>
-                  <div class="alberca-data">
-                    <h3>{{alberca.Alb_Ubicacion}}</h3>
-                    <p>{{alberca.Alb_Capacidad}}</p>
-                  </div>
-                </div>
-            </div>  
-          </ng-template>
+            </a>
 
 
             <button class="btn btn-lg btn-danger" (click)="openModal(template)" style="margin-right:10px;">
@@ -69,7 +49,7 @@
             </div>            
           </ng-template>
 
-            <a [routerLink]="['/registrar_sensor',alberca._id]" class="btn btn-lg btn-primary">
+            <a class="btn btn-lg btn-primary">
               <span class="glyphicon glyphicon-flash" aria-hidden="true"></span> Sensor
             </a>
 
