--- a/proyecto-estructurador/src/app/components/buscar-sensor/buscar-sensor.component.css
+++ b/proyecto-estructurador/src/app/components/buscar-sensor/buscar-sensor.component.css
@@ -32,12 +32,9 @@ table {
     border-collapse: collapse;
     width: 80%;
 
-
-
 }
 
 th, td {
-    text-align: center;
     padding-top: 10px;
     padding-bottom: 10px;
     padding-right: 4px;
@@ -57,6 +54,29 @@ h1{
 	color: white;
 	font-family: gadugi;
 	font-size: 1.8em;
+
+}
+
+h1.al_tit{
+	text-align: center;
+	margin:20px;
+	color: white;
+	font-family: gadugi;
+	font-size: 1.8em;
+	vertical-align: middle;
+
+}
+
+p.al_tex{
+	margin-top: 10px;
+	margin-bottom: 10px;
+	margin-right: 20px;
+	margin-left: 20px;
+	color: #4d4f54;
+	font-family: gadugi;
+	font-size: 1.2em;
+
+	
 }
 
 .botones{
@@ -70,6 +90,32 @@ h1{
 	margin: auto;
 
 	
+}
+
+.alberca{
+	padding: 30px;
+	margin: 30px;
+	width: 80%;
+	margin: auto;
+
+	display: flex;
+	justify-content: center; 
+	align-items:center;
+	text-align: justify;
+	flex-direction: column;
+	border: 1px solid #172646
+}
+
+.tit{
+	width: 80%;
+	margin: auto;
+	background-color: #172646;
+	vertical-align: middle;
+
+}
+
+.image_for_edit{
+margin: 10px;
 }
 
 input[type="text"], input[type="password"], input[type="mail"]{
