--- a/proyecto-estructurador/src/app/components/buscar-sensor/buscar-sensor.component.html
+++ b/proyecto-estructurador/src/app/components/buscar-sensor/buscar-sensor.component.html
@@ -1,4 +1,17 @@
 <div class="contenedor">
+    
+    <div class="tit"><h1 class="al_tit">{{alberca.Alb_Nombre}}</h1></div>
+    <div class="alberca">
+  
+
+      <!--<div class="image_for_edit" *ngIf="alberca.Alb_Image && alberca.Alb_Image != 'null'">
+      </div>-->
+   <img src="{{url + 'get-image-alberca/'+alberca.Alb_Image}}">
+
+    <p class="al_tex"> {{alberca.Alb_Capacidad}} </p>
+  <p class="al_tex"> {{alberca.Alb_Ubicacion}} </p>
+
+  </div>
 
   <div class="botones">
       <form >
@@ -12,6 +25,7 @@
 
     <table class="table-hover">
         <tr>
+          <th>ID</th>
           <th>Nombre</th>
           <th>Descripcion</th>
           <th>IP</th>
@@ -19,12 +33,13 @@
         </tr>
 
         <tr *ngFor="let sensor of sensores | search: busqueda">
+          <td>{{sensor._id}}</td>
           <td>{{sensor.Sen_Nombre}}</td>
           <td>{{sensor.Sen_Descripcion}}</td>
           <td>{{sensor.Sen_ip}}</td>
 
           <td class="acciones">
-            <button class="btn btn-lg btn-success" (click)="openModal(ver)" style="margin-right:10px;">
+            <button class="btn btn-sm btn-success" *ngIf="" (click)="openModal(ver)" style="margin-right:10px;">
 
               <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> Ver
             </button>
@@ -50,7 +65,7 @@
           </ng-template>
 
 
-            <button class="btn btn-lg btn-danger" (click)="openModal(template)" style="margin-right:10px;">
+            <button class="btn btn-sm btn-danger" (click)="openModal(template)" style="margin-right:10px;">
               <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Borrar
             </button>
 
@@ -70,9 +85,10 @@
             </div>            
           </ng-template>
 
-            <a class="btn btn-lg btn-primary">
-              <span class="glyphicon glyphicon-flash" aria-hidden="true"></span> Sensor
+            <a class="btn btn-sm btn-primary" [routerLink]="['/graf-lineal']">
+              <span class="glyphicon glyphicon-stats" aria-hidden="true"></span> Graficar
             </a>
+
 
           </td>
         </tr>
@@ -80,4 +96,4 @@
   </div>
 
 
-  </div> <!-- fin contenedor-->
+  </div>
