--- a/proyecto-estructurador/src/app/components/editar-miembro/editar-miembro.component.css
+++ b/proyecto-estructurador/src/app/components/editar-miembro/editar-miembro.component.css
@@ -12,10 +12,27 @@
  
 	/* Flexbox */
 	display:flex;
-	flex-direction: column;
+	flex-direction: row;
+	flex-wrap: wrap;
 	
+}
+ 
+.alertas{
+	margin: auto;
+	width: 60%;
+	height: 60px;
 
 }
+
+.alertas h3{
+	color: #FFF;
+	height: 60px;
+	padding: 20px; 
+	text-align: center;
+	font-family: gadugi;
+	font-size: 1.3em;
+}
+
 
 .datos {
 	width: 100%;
@@ -25,13 +42,6 @@
 	justify-content: center;
 	align-items: center;
 	align-content: center;
-}
-
-form{
-	width: 60%;
-	margin: auto;
-	margin-top: 20px;
-
 }
 
 
@@ -48,28 +58,56 @@ h1{
 	
 }
 
-.busqueda{
-	width: 100%;
+form{
+	width: 60%;
 	margin: auto;
-	margin-top: 30px;
-	
+	margin-top: 20px;
+
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
 }
 
-input[type="text"], input[type="password"], input[type="mail"]{
-
+form div {
 	width: 46%;
+	margin-left: 18px;
+	font-size: 1.1em;
+	outline: none;
+	background-color: #fff;
+}
+
+label{
+	color: #172646;
+	font-family: gadugi;
+	width: 100%;
+	margin-top: 10px;
+	font-size: 1.1em;
+	outline: none;
+	margin-bottom: 5px;
+	background-color: #fff;
+}
+
+input[type="text"], input[type="password"], input[type="email"]{
+	width: 100%;
 	height: 40px;
 	padding: 10px;
-	margin-top: 10px;
-	margin-left: 18px;
 	margin-bottom: 10px;
 	font-size: 1.1em;
 	outline: none;
-	border:1px solid gray;
 	background-color: #fff;
-	
-
+	border:1px solid gray;
 }
+
+input[type="file"]{
+	width: 100%;
+	height: 40px;
+	margin-bottom: 10px;
+	font-size: 1.1em;
+	outline: none;
+	background-color: #fff;
+	border:1px solid gray;
+}
+
 
 input[id="nom"]{
 	width: 95.2%;	
@@ -77,11 +115,11 @@ input[id="nom"]{
 }
 
 
-input[type="submit"]{
+input[type="submit"], input[type="button"]{
 
 	width:150px;
 	height: 40px;
-	margin-top: 10px;
+	margin-top: 100px;
 	margin-left: 17px;
 	border:0px;
 	background-color: #3db7ef;
@@ -96,18 +134,6 @@ input:focus, textarea:focus {
   border-color: #2d3e50;
 }
 
-.selec{
-	margin: 5px;
-	color: #4d4f54;
-	font-family: gadugi;
-	font-size: 2em;
-}
-
-.derechos{
-	font-family: gadugi;
-	color: white;
-	margin: auto;
-}
 
 #titun{
 	margin: auto;
