--- a/proyecto-estructurador/src/app/components/registro-miembro/registro-miembro.component.html
+++ b/proyecto-estructurador/src/app/components/registro-miembro/registro-miembro.component.html
@@ -11,11 +11,11 @@
 	<div class="datos">
 
 
-	    <form #registerUserForm="ngForm" (ngSubmit)="onSubmit(registerUserForm)" name="registerUserForm">
+	    <form #registerSocioForm="ngForm" (ngSubmit)="onSubmit(registerSocioForm)" name="registerUserForm">
 
 			<div class="padre">
 				<label for="nombre">Nombre</label>
-				<input type="text" name="nombre" #name="ngModel" [(ngModel)]="user.nombre" class="form-control" placeholder="Nombre" minlength="3" maxlength="48" pattern="[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]{3,48}" required>
+				<input type="text" name="nombre" #name="ngModel" [(ngModel)]="socio.Usu_Nombre" class="form-control" placeholder="Nombre" minlength="3" maxlength="48" pattern="[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]{3,48}" required>
 				<span *ngIf="!name.valid && name.touched" tooltip="Solo se permiten letras, entre 3-48 caráctere"
 				      [tooltipDisabled]="false"
 				      [tooltipAnimation]="true"
@@ -27,7 +27,7 @@
 			<div>
 
 				<label for="paterno">Apellido Paterno</label>
-		    	<input type="text" name="paterno" placeholder="Apellido Paterno" #paterno="ngModel" [(ngModel)]="user.paterno" class="form-control" minlength="3" maxlength="48" pattern="[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]{3,48}" required>
+		    	<input type="text" name="paterno" placeholder="Apellido Paterno" #paterno="ngModel" [(ngModel)]="socio.Usu_Apellido_P" class="form-control" minlength="3" maxlength="48" pattern="[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]{3,48}" required>
 
 		      	<span *ngIf="!paterno.valid && paterno.touched" tooltip="Solo se permiten letras, entre 3-48 caráctere"
 				      [tooltipDisabled]="false"
@@ -41,7 +41,7 @@
 			<div>
 
 				<label for="materno">Apellido Materno</label>
-		    	<input type="text" name="materno" placeholder="Apellido Materno" #materno="ngModel" [(ngModel)]="user.materno" class="form-control" minlength="3" maxlength="48" pattern="[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]{3,48}" required>
+		    	<input type="text" name="materno" placeholder="Apellido Materno" #materno="ngModel" [(ngModel)]="socio.Usu_Apellido_M" class="form-control" minlength="3" maxlength="48" pattern="[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]{3,48}" required>
 
 		      	<span *ngIf="!materno.valid && materno.touched" tooltip="Solo se permiten letras, entre 3-48 caráctere"
 				      [tooltipDisabled]="false"
@@ -54,7 +54,7 @@
 
 			<div>
 				<label for="telefono">Telefono</label>
-				<input type="text" name="telefono" placeholder="Telefono" #telefono="ngModel" [(ngModel)]="user.telefono" class="form-control" minlength="7" maxlength="10" pattern="[0-9]*" required>
+				<input type="text" name="telefono" placeholder="Telefono" #telefono="ngModel" [(ngModel)]="socio.Usu_Telefono" class="form-control" minlength="7" maxlength="10" pattern="[0-9]*" required>
 
 				<span *ngIf="!telefono.valid && telefono.touched" tooltip="Solo se permite numeros entre 7 y 10 caracteres"
 				      [tooltipDisabled]="false"
@@ -66,7 +66,7 @@
 
 			<div>
 				<label for="email">E-Mail</label>
-				<input type="email" name="email" #email="ngModel" [(ngModel)]="user.email" class="form-control" placeholder="E-Mail" minlength="5" maxlength="50" pattern="^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$" required>
+				<input type="email" name="email" #email="ngModel" [(ngModel)]="socio.Usu_Email" class="form-control" placeholder="E-Mail" minlength="5" maxlength="50" pattern="^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$" required>
 				<span *ngIf="!email.valid && email.touched" tooltip="Utilize el siguiente  formato: alguien@example.com"
 				      [tooltipDisabled]="false"
 				      [tooltipAnimation]="true"
@@ -75,12 +75,10 @@
 				</span>
 
 			</div>
-
-
 			
 			<div>
 				<label for="password">Contraseña</label>
-				<input type="password" name="password" #password="ngModel" [(ngModel)]="user.password" class="form-control" placeholder="Contraseña" minlength="8" maxlength="30" pattern="[A-Za-z0-9!?-]{8,30}" required>
+				<input type="password" name="password" #password="ngModel" [(ngModel)]="socio.Usu_Password" class="form-control" placeholder="Contraseña" minlength="8" maxlength="30" pattern="[A-Za-z0-9!?-]{8,30}" required>
 				<span *ngIf="!password.valid && password.touched" tooltip="La contraseña debe contener minimo 8 caracteres"
 				      [tooltipDisabled]="false"
 				      [tooltipAnimation]="true"
@@ -89,9 +87,9 @@
 				</span>
 			</div>
 
-	      	<input type="submit" value="Guardar" class="btn btn-primary" [disabled]="!registerUserForm.form.valid">
+	      	<input type="submit" value="Guardar" class="btn btn-primary" [disabled]="!registerSocioForm.form.valid">
 
-	      	<input type="button" value="Cancelar" (click)="limpiarForm(registerUserForm)">
+	      	<input type="button" value="Cancelar" (click)="limpiarForm(registerSocioForm)">
 
 	    </form>
 	</div>
